# customer-churn-prediction

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: train.py
src/churn/: __init__.py  config.py
src/churn/api/: main.py  schemas.py
src/churn/data/: loader.py  synth.py
src/churn/evaluation/: metrics.py
src/churn/features/: engineering.py
src/churn/models/: trainer.py
tests/: test_api.py  test_features.py  test_synth_and_loader.py  test_training.py
