[project]
name = "customer-churn-prediction"
version = "1.0.0"
description = "Customer Retention Intelligence & Churn Prediction Platform"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
